--- a/hello.html
+++ b/hello.html
@@ -8,5 +8,6 @@
     </head>
     <body>
         "Yo whats up dude?" - Tyler the Creator
+        "Oh nothing really just learning how to use git"
     </body>
 </html>
